# app_marketplace

./: .gitignore  README.md  index.html  package-lock.json  package.json
public/: apps.json  apps_google.json  apps_tools.json
scripts/: bizapp.bat  buzapp.bat
src/: BizApp.vue  BuzApp.vue  application.jsx  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: test_install.bat  test_version.txt
src/components/: AppDetail.vue  AppList.vue  Log.vue
