[package]
name = "bizapp"
version = "1.0.0"
description = "BizApp: the Business Applications market place"
authors = ["antoine_dev@aumjaud.fr"]
license = "MIT"
repository = "https://github.com/antoine-aumjaud/app_marketplace"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-all", "fs-exists", "fs-read-file", "fs-remove-dir", "fs-write-file", "shell-execute", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
